--- a/index.html
+++ b/index.html
@@ -8,39 +8,45 @@
     <link href="https://fonts.cdnfonts.com/css/din-condensed" rel="stylesheet">    
     <link rel="stylesheet" href="css/style.css">
     <scripts src="script/main.js">
-    <title>Jse's Coding Corner</title>
+    <title>Jse's Corner</title>
 </head>
 <body>
-    <nav id="nav-section">
+    <nav class="nav-container">
         <ul id="nav-menu" >
-            <li><a href="#home">Home</a></li> 
-            <li><a href="#about">About</a></li> 
-            <li><a href="#projects">Projects</a></li> 
-            <li><a href="#links">Links</a></li> 
+            <li><a href="#home">1.0 Home</a></li> 
+            <li><a href="#about">2.0 About</a></li> 
+            <li><a href="#projects">3.0 Projects</a></li> 
+            <li><a href="#links">4.0 Links</a></li> 
         </ul>
     </nav>
     <main class="main-container">
-        <div class="main-section" id="#home">
-            <h1>You are about to witness something wonderful.</h1>
-        </div>
-        <div class="main-section" id="#about">
-            <h1>Hello my name is Jse, and I am a developer with some experience looking to learn more.</h1>
-        </div>
-        <div class="main-section" id="#projects">
-            <div class="project-block">
-                <h2>Project 1</h2>
-                <p>Here is a description of Project 1</p>
-            </div>
-            <div class="project-block">
-                <h2>Project 2</h2>
-                <p>Here is a description of Project 2</p>
+        <div class="side-pane">
+            <div id="links">
+                <a href="https://jsectrl.tumblr.com/" class="fa fa-tumblr" target="_blank" rel="noopener noreferrer"></a></li>
+                <a href="https://github.com/jsectrl" class="fa fa-github" target="_blank" rel="noopener noreferrer"></a></li>
             </div>
         </div>
-        <div class="main-section" id="#links">
-            <ul>
-                <li><a href="https://jsectrl.tumblr.com/" class="fa fa-tumblr" target="_blank" rel="noopener noreferrer"></a></li>
-                <li><a href="https://github.com/jsectrl" class="fa fa-github" target="_blank" rel="noopener noreferrer"></a></li>
-            </ul>
+        <div class="center-pane">
+            <div class="main-section" id="#home">
+                <h1>Jse</h1>
+                <h3>The newcomer software engineer that has all the people talking and will, without a doubt, get on your nerves</h3>
+            </div>
+            <div class="main-section" id="#about">
+                <p> I am just a creative and ambitious individual seeking work and experience.
+                </p>
+            </div>
+            <div class="main-section" id="#projects">
+                <div class="project-block">
+                    <h2>Project 1</h2>
+                    <p>Here ibottoms a description of Project 1</p>
+                </div>
+                <div class="project-block">
+                    <h2>Project 2</h2>
+                    <p>Here is a description of Project 2</p>
+                </div>
+            </div>
+        </div>
+        <div class="side-pane">
         </div>
     </main>
 </body>
