--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.cdnfonts.com/css/din-condensed" rel="stylesheet">    
-    <link rel="stylesheet" href="css/style.css">
-    <scripts src="script/main.js">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="script/main.js"></script>
     <title>Jse's Corner</title>
 </head>
 <body>
