Made some updates to the page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="main-section" id="#projects">
                 <div class="project-block">
                     <h2>Project 1</h2>
-                    <p>Here ibottoms a description of Project 1</p>
+                    <p>Here is a description of Project 1</p>
                 </div>
                 <div class="project-block">
                     <h2>Project 2</h2>
