Added CSS styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.cdnfonts.com/css/din-condensed" rel="stylesheet">    
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="script/main.js"></script>
     <title>Jse's Corner</title>
 </head>
@@ -42,7 +43,7 @@
                 </div>
                 <div class="project-block">
                     <h2>Project 2</h2>
-                    <p>Here is a description of Project 2</p>
+                    <p>Notice here is a description of Project 2</p>
                 </div>
             </div>
         </div>
