Added some details to the website

--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
     </nav>
     <main class="main-container">
         <div class="side-pane">
-            <div id="links">
+            <div class="link-button">
                 <a href="https://jsectrl.tumblr.com/" class="fa fa-tumblr" target="_blank" rel="noopener noreferrer"></a></li>
+            </div>
+            <div class="link-button">
                 <a href="https://github.com/jsectrl" class="fa fa-github" target="_blank" rel="noopener noreferrer"></a></li>
             </div>
         </div>
         <div class="center-pane">
             <div class="main-section" id="#home">
-                <h1>Jse</h1>
-                <h3>The newcomer software engineer that has all the people talking and will, without a doubt, get on your nerves</h3>
+                <h1 id="intro-line">Hello, my name is</h1>
+                <h1 id="intro-name">Jse</h1>
+                <h3 id="intro-brief">I know very much about two things.</h3>
             </div>
             <div class="main-section" id="#about">
                 <p> I am just a creative and ambitious individual seeking work and experience.
@@ -40,10 +43,11 @@
                 <div class="project-block">
                     <h2>Project 1</h2>
                     <p>Here is a description of Project 1</p>
+                   
                 </div>
-                <div class="project-block">
+                <div class="project-block">    
                     <h2>Project 2</h2>
-                    <p>Notice here is a description of Project 2</p>
+                    <p>Here is the decription to project 2. </p>
                 </div>
             </div>
         </div>
