--- a/index.html
+++ b/index.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.cdnfonts.com/css/din-condensed" rel="stylesheet">    
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.cdnfonts.com/css/din-condensed"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="script/main.js"></script>
     <title>Jse's Corner</title>
-</head>
-<body>
-    <nav class="nav-container">
-        <ul id="nav-menu" >
-            <li><a href="#home">1.0 Home</a></li> 
-            <li><a href="#about">2.0 About</a></li> 
-            <li><a href="#projects">3.0 Projects</a></li> 
-            <li><a href="#links">4.0 Links</a></li> 
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="navbar_container">
+        <a href="/" id="navbar_logo">Jsectrl</a>
+        <div class="navbar_toggle" id="mobile_menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="navbar_menu">
+          <li class="navbar_item">
+            <a href="/" class="navbar_link"> Home </a>
+          </li>
+          <li class="navbar_item">
+            <a href="/" class="navbar_link"> About </a>
+          </li>
+          <li class="navbar_item">
+            <a href="/" class="navbar_link"> Projects </a>
+          </li>
+          <li class="navbar_item">
+            <a href="/" class="navbar_link"> Contact </a>
+          </li>
         </ul>
+      </div>
     </nav>
-    <main class="main-container">
-        <div class="side-pane">
-            <div class="link-button">
-                <a href="https://jsectrl.tumblr.com/" class="fa fa-tumblr" target="_blank" rel="noopener noreferrer"></a></li>
-            </div>
-            <div class="link-button">
-                <a href="https://github.com/jsectrl" class="fa fa-github" target="_blank" rel="noopener noreferrer"></a></li>
-            </div>
-        </div>
-        <div class="center-pane">
-            <div class="main-section" id="#home">
-                <h1 id="intro-line">Hello, my name is</h1>
-                <h1 id="intro-name">Jse</h1>
-                <h3 id="intro-brief">I know very much about two things.</h3>
-            </div>
-            <div class="main-section" id="#about">
-                <p> I am just a creative and ambitious individual seeking work and experience.
-                </p>
-            </div>
-            <div class="main-section" id="#projects">
-                <div class="project-block">
-                    <h2>Project 1</h2>
-                    <p>Here is a description of Project 1</p>
-                   
-                </div>
-                <div class="project-block">    
-                    <h2>Project 2</h2>
-                    <p>Here is the decription to project 2. </p>
-                </div>
-            </div>
-        </div>
-        <div class="side-pane">
-        </div>
-    </main>
-</body>
+  </body>
 </html>
