Experimented with layout

--- a/index.html
+++ b/index.html
@@ -18,29 +18,92 @@
     <title>Jse's Corner</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar_container">
-        <a href="/" id="navbar_logo">Jsectrl</a>
-        <div class="navbar_toggle" id="mobile_menu">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+    <div class="main-overlay_container">
+      <header class="menu-pane">
+        <div class="left-menu">
+          <div class="intro-block">
+            <p>My name is Jose.</p>
+          </div>
+          <div class="main-menu">
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact Me!</a></li>
+            </ul>
+          </div>
+          <div class="links">
+            <a
+              href="https://github.com/jsectrl"
+              target="_blank"
+              class="fa fa-github fa-2x"
+            ></a>
+            <a
+              href="https://jsectrl.tumblr.com/"
+              target="_blank"
+              class="fa fa-tumblr fa-2x"
+            ></a>
         </div>
-        <ul class="navbar_menu">
-          <li class="navbar_item">
-            <a href="/" class="navbar_link"> Home </a>
-          </li>
-          <li class="navbar_item">
-            <a href="/" class="navbar_link"> About </a>
-          </li>
-          <li class="navbar_item">
-            <a href="/" class="navbar_link"> Projects </a>
-          </li>
-          <li class="navbar_item">
-            <a href="/" class="navbar_link"> Contact </a>
-          </li>
-        </ul>
+      </header>
+    </div>
+    <div class="main-flex_container">
+      <div class="flex-pane">
       </div>
-    </nav>
+      <div class="flex-pane">
+        <div class="flec-section">
+          <p class="intro-par">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
+            soluta eos ut optio fugiat odit asperiores magni quod sapiente
+            voluptatibus impedit fugit placeat, quam tempore eius itaque dolor
+            fuga distinctio. Aliquid, nobis. Explicabo at et accusantium itaque
+            nulla provident incidunt similique natus quia maiores, tenetur amet
+            quaerat libero quidem, a doloribus exercitationem? Voluptatibus
+            itaque eum omnis animi rerum alias. Dolore! Magnam libero
+            necessitatibus voluptate voluptas est aliquam suscipit, mollitia
+            vitae alias hic repellat sequi ducimus, similique nobis illo maxime
+            minus in. Earum dolorum soluta odio facere pariatur voluptas quam
+            tempore! Veritatis ducimus tempora repellat quam maiores reiciendis
+            natus facilis commodi possimus neque in odio explicabo, magni
+            aspernatur dolorem impedit consectetur inventore nemo obcaecati
+            illum saepe nostrum. Facilis aspernatur ullam magnam? Iure,
+            distinctio quibusdam accusantium ex sunt officiis non harum
+            perspiciatis numquam hic sequi officia earum optio adipisci magnam
+            tempore, ipsa suscipit nihil? Quibusdam quis soluta commodi deserunt
+            nisi dolor. Voluptas. Magni repudiandae cupiditate quos voluptas
+            nulla iure debitis deleniti porro quibusdam ad harum, dolorum
+            facilis ullam autem pariatur laudantium rerum dicta ab temporibus
+            explicabo voluptatem sequi quam. Blanditiis, ut voluptates. Sapiente
+            praesentium hic voluptatibus cupiditate, maiores sit, accusamus
+            tempora nam consectetur error placeat aperiam! Quia harum quibusdam
+            provident nam, sed voluptate minima quisquam esse. Recusandae
+            doloremque ex laudantium hic. Suscipit? Recusandae doloremque
+            delectus magnam dolorum. Rerum ea dolor porro maiores placeat sint
+            pariatur magnam, cumque voluptatem excepturi vero ab, itaque
+            nesciunt incidunt minima tenetur, nihil quasi nostrum? Iste,
+            dignissimos facilis. Ipsum voluptatibus distinctio, dolores, ducimus
+            adipisci dolore eveniet at aspernatur eum quidem ratione pariatur,
+            hic ipsam nemo! Voluptatem amet consectetur consequuntur adipisci,
+            tempore vel fugit labore eaque autem facere quam. Architecto
+            pariatur dolore cum quam iusto doloribus nihil modi quibusdam,
+            cumque asperiores aspernatur at tempore itaque voluptates, optio
+            iste voluptatum obcaecati laboriosam molestias sint? Rerum velit
+            repellendus earum. Nihil, at.
+          </p>
+          <p class="intro-par"></p>
+        </div>
+        <div class="right-section">
+          <p class="intro-par"></p>
+        </div>
+        <div class="right-section">
+          <p class="intro-par"></p>
+        </div>
+        <div class="right-section">
+          <p class="intro-par"></p>
+        </div>
+        <div class="right-section">
+          <p class="intro-par"></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
