Added some functions

--- a/index.html
+++ b/index.html
@@ -18,39 +18,29 @@
     <title>Jse's Corner</title>
   </head>
   <body>
-    <div class="main-overlay_container">
+    <div class="main-container">
       <header class="menu-pane">
-        <div class="left-menu">
-          <div class="intro-block">
-            <p>My name is Jose.</p>
-          </div>
-          <div class="main-menu">
-            <ul>
-              <li><a href="#about">About</a></li>
-              <li><a href="#experience">Experience</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#contact">Contact Me!</a></li>
-            </ul>
-          </div>
-          <div class="links">
-            <a
-              href="https://github.com/jsectrl"
-              target="_blank"
-              class="fa fa-github fa-2x"
-            ></a>
-            <a
-              href="https://jsectrl.tumblr.com/"
-              target="_blank"
-              class="fa fa-tumblr fa-2x"
-            ></a>
-        </div>
+        <span id="name-tag">Jose G</span>
+        <ul class="menu-block">
+          <li><a class="menu-item" href="#about">About</a></li>
+          <li><a class="menu-item" href="#experience">Experience</a></li>
+          <li><a class="menu-item" href="#projects">Projects</a></li>
+          <li><a class="menu-item" href="#contact">Contact Me!</a></li>
+        </ul>
+        <div class="links-block">
+          <a
+            href="https://github.com/jsectrl"
+            target="_blank"
+            class="fa fa-github fa-2x"
+          ></a>
+          <a
+            href="https://jsectrl.tumblr.com/"
+            target="_blank"
+            class="fa fa-tumblr fa-2x"
+          ></a>
       </header>
-    </div>
-    <div class="main-flex_container">
-      <div class="flex-pane">
-      </div>
-      <div class="flex-pane">
-        <div class="flec-section">
+      <main class="main-pane">
+        <div class="section-pane">
           <p class="intro-par">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
             soluta eos ut optio fugiat odit asperiores magni quod sapiente
@@ -89,21 +79,7 @@
             iste voluptatum obcaecati laboriosam molestias sint? Rerum velit
             repellendus earum. Nihil, at.
           </p>
-          <p class="intro-par"></p>
-        </div>
-        <div class="right-section">
-          <p class="intro-par"></p>
-        </div>
-        <div class="right-section">
-          <p class="intro-par"></p>
-        </div>
-        <div class="right-section">
-          <p class="intro-par"></p>
-        </div>
-        <div class="right-section">
-          <p class="intro-par"></p>
-        </div>
-      </div>
+        </main>
     </div>
   </body>
 </html>
